doc: Avoid too much margin for lists

--- a/doc/html/mkdoc.css
+++ b/doc/html/mkdoc.css
@@ -95,6 +95,10 @@ ul {
   list-style-type: disc;
 }
 
+li > p {
+  margin: 0;
+}
+
 hr {
   margin: 20px 0px;
 }
